Make a fixed grid web page responsive one

--- a/components/sass/styles_absolute_grid.scss
+++ b/components/sass/styles_absolute_grid.scss
@@ -7,8 +7,7 @@
 
 //Global Styles and for Smart Phones: 0 ~ 480px
 body {
-	//width: 1024px;
-	width: 100%;
+	width: 1024px;
 	margin: 0;
 	padding: 0;
 	line-height: 1.5em;
@@ -49,8 +48,7 @@ nav {
 	}
 }
 #contents {
-	//width: 800px;
-	width: 78.125%;
+	width: 800px;
 	margin: 1em auto 1em;
 
 	h1 {
@@ -70,6 +68,21 @@ section {
 	}
 }
 footer {
-	width: 100%;
+	width: 1024px;
 	text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
